# MiniProject8

./: Cargo.toml  Makefile  README.md  main.py  main.rs  requirements.txt
.devcontainer/: Dockerfile
rust_analysis/: Cargo.toml
rust_analysis/src/: main.rs
